--- a/src/pages/thesis/style.css
+++ b/src/pages/thesis/style.css
@@ -105,3 +105,18 @@ li {
     transform: translateZ(0);
   }
 }
+
+.image-placeholder {
+  width: 100%;
+  height: 250px;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--text-color-3);
+  margin: 30px 0;
+}
+
+.fadeInUp {
+  animation: fadeInUp 0.8s ease-out;
+}
