--- a/src/header/style.scss
+++ b/src/header/style.scss
@@ -2,6 +2,7 @@
   top: 10px;
   padding-left: 10px;
   padding-right: 10px;
+  background-color: var(--primary-color);
 }
 
 .menu__button {
@@ -204,4 +205,16 @@
   color: var(--text-color-2);
   margin-right: 10px;
   text-decoration: none;
+}
+
+.menu_item--sub > a {
+  color: var(--text-color-2);
+  line-height: 1;
+  font-size: 2rem;
+  display: inline-block;
+  position: relative;
+  transition: color 250ms cubic-bezier(0, 0, 0.58, 1) 0s;
+  padding: 4px 0px;
+  text-decoration: none;
+  font-family: Marcellus;
 }
