--- a/src/partials/_global.scss
+++ b/src/partials/_global.scss
@@ -6,6 +6,9 @@ p {
   @include tablet {
     font-size: 1.125rem;
   }
+  @include desktop {
+    font-size: 1.5rem;
+  }
 }
 strong {
   color: $gromGreen;
