fixed light mode styling issue

--- a/src/pages/thesis/style.scss
+++ b/src/pages/thesis/style.scss
@@ -42,11 +42,11 @@ section {
 }
 
 /* Background Styling */
-#motivations,
-#optics,
-#software {
-  background: linear-gradient(45deg, #1a1a1a, #333);
-}
+// #motivations,
+// #optics,
+// #software {
+//   background: linear-gradient(45deg, #1a1a1a, #333);
+// }
 
 /* Shared Section Styles */
 .motivations,
